--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@ accessed on: May 29, 2021
     <div class="container">
         <h3>Weekly Assignments</h3>
         <ul>
-            <li><a href="#"></a>Exercise 2.2</li>
-            <li><a href="#"></a>Assignment 2.3</li>
-            <li><a href="#"></a>Assignment 3.2</li>
-            <li><a href="#"></a>Assignment 4.2</li>
-            <li><a href="#"></a>Assignment 5.2</li>
-            <li><a href="#"></a>Assignment 6.2</li>
-            <li><a href="#"></a>Assignment 7.2</li>
-            <li><a href="#"></a>Assignment 8.2</li>
+            <li><a href="#">Exercise 2.2</a></li>
+            <li><a href="#">Assignment 2.3</a></li>
+            <li><a href="#">Assignment 3.2</a></li>
+            <li><a href="#">Assignment 4.2</a></li>
+            <li><a href="#">Assignment 5.2</a></li>
+            <li><a href="#">Assignment 6.2</a></li>
+            <li><a href="#">Assignment 7.2</a></li>
+            <li><a href="#">Assignment 8.2</a></li>
         </ul>
     </div>
     
     <div class="container">
         <h3>Projects</h3>
         <ul>
-            <li><a href="#"></a>Final: Card Game</li>
-            <li><a href="#"></a>bioSite Project Home Page</li>
+            <li><a href="#">Final: Card Game</a></li>
+            <li><a href="#">bioSite Project Home Page</a></li>
         </ul>
     </div>
 
