--- a/week-2/index.html
+++ b/week-2/index.html
@@ -32,7 +32,7 @@ accessed on: 6/4/2021-->
 
     </div>
 
-    <a href class="return-home" src="\index.html">Return</a>
+    <a href class="return-home" src="https://billyrtalley.github.io/web-231/">Return</a>
 
     <script>
 
