--- a/week-2/index.html
+++ b/week-2/index.html
@@ -11,8 +11,8 @@
         content="nofollow" />
     <meta name="author"
         content="William Talley"/>
-    <link rel="stylesheet" type="text/css" href="\site.css">
-    <link rel="stylesheet" type="text/css" href="\global.css">
+    <link rel="stylesheet" type="text/css" href="/site.css">
+    <link rel="stylesheet" type="text/css" href="/global.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
@@ -32,7 +32,7 @@ accessed on: 6/4/2021-->
 
     </div>
 
-    <a href class="return-home" src="https://billyrtalley.github.io/web-231/">Return</a>
+    <a href class="https://billyrtalley.github.io/web-231/" class="return-home">Return</a>
 
     <script>
 
