--- a/week-2/index.html
+++ b/week-2/index.html
@@ -32,7 +32,7 @@ accessed on: 6/4/2021-->
 
     </div>
 
-    <a href class="https://billyrtalley.github.io/web-231/" class="return-home">Return</a>
+    <a href="https://billyrtalley.github.io/web-231/" class="return-home">Return</a>
 
     <script>
 
