--- a/week-2/index.html
+++ b/week-2/index.html
@@ -11,8 +11,8 @@
         content="nofollow" />
     <meta name="author"
         content="William Talley"/>
-    <link rel="stylesheet" type="text/css" href="/site.css">
-    <link rel="stylesheet" type="text/css" href="/global.css">
+    <link rel="stylesheet" type="text/css" href="../site.css">
+    <link rel="stylesheet" type="text/css" href="../global.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
@@ -21,7 +21,11 @@
     <!--Exhibit A User Interface
     W3Schools HTML DOM Event addEventListener() Method
 url: https://www.w3schools.com/jsref/met_element_addeventlistener.asp
-accessed on: 6/4/2021-->
+accessed on: 6/4/2021
+W3Schools Window alert() Method
+url: https://www.w3schools.com/jsref/met_win_alert.asp 
+accessed on: 6/4/2021
+-->
 
     <div class="container">
         <h1>Exercise 2.2 Hello JavaScript</h1>
