--- a/week-2/talley-exercise2.html
+++ b/week-2/talley-exercise2.html
@@ -1,3 +1,10 @@
+<!--
+    file created for use in assignments in WEB231
+as outlined in the document
+WEB231_Assign_1 by Professor Krasso (n.d.)
+accessed on: June 5, 2021
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
