--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ accessed on: May 29, 2021
     <div class="container">
         <h3>Weekly Assignments</h3>
         <ul>
-            <li><a href="week-2/index.html">Exercise 2.2</a></li>
-            <li><a href="#">Assignment 2.3</a></li>
+            <li><a href="week-2/talley-exercise2.html">Exercise 2.2</a></li>
+            <li><a href="week-2/talley-payroll.html">Assignment 2.3</a></li>
             <li><a href="#">Assignment 3.2</a></li>
             <li><a href="#">Assignment 4.2</a></li>
             <li><a href="#">Assignment 5.2</a></li>
