--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ accessed on: May 29, 2021
             <li><a href="week-2/talley-exercise2.html">Exercise 2.2</a></li>
             <li><a href="week-2/talley-payroll.html">Assignment 2.3</a></li>
             <li><a href="week-3/temp-conversion.html">Assignment 3.2</a></li>
-            <li><a href="#">Assignment 4.2</a></li>
+            <li><a href="week-4/talley-number-game.html">Assignment 4.2</a></li>
             <li><a href="#">Assignment 5.2</a></li>
             <li><a href="#">Assignment 6.2</a></li>
             <li><a href="#">Assignment 7.2</a></li>
