--- a/week-4/talley-number-game.html
+++ b/week-4/talley-number-game.html
@@ -26,8 +26,8 @@
        <div class="container">
       <h1 id="game-header">Welcome to the numbers game!</h1>
 
-      <div id="card">
-        <div id="card-title">Pick and number between 1 and 10</div>
+      <div class="card">
+        <div class="card-title">Pick and number between 1 and 10</div>
         <br />
         <form>
           <label for="txtMyNumber" id="txtMyNumberLabel">
@@ -39,9 +39,9 @@
         </form>
       </div>
       <br />
-      <div id="card">
-        <p id="card-title">Results</p>
-        <p id="card-content"></p>
+      <div class="card">
+        <p class="card-title">Results</p>
+        <p class="card-content"></p>
       </div>
       <br />
       <a href="../index.html" class="return-home">Return</a>
