--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ accessed on: May 29, 2021
             <li><a href="week-4/talley-number-game.html">Assignment 4.2</a></li>
             <li><a href="week-5/talley-sequence-game.html">Assignment 5.2</a></li>
             <li><a href="week-6/tallley-in-n-out-books.html">Assignment 6.2</a></li>
-            <li><a href="#">Assignment 7.2</a></li>
+            <li><a href="week-7/talley-javazon.html">Assignment 7.2</a></li>
             <li><a href="#">Assignment 8.2</a></li>
         </ul>
     </div>
