week8; exta practice; not for grading

--- a/week-8/konami code.html
+++ b/week-8/konami code.html
@@ -38,7 +38,7 @@
     </div>
 
     <div>
-        <img class="contra" src="https://i.imgur.com/Ikx5DvQ.jpg" alt="Konami Contra (C) 1997">  
+        <img class="contra" src="https://i.imgur.com/Ikx5DvQm.jpg" alt="Konami Contra (C) 1997">  
     </div>
 
     <script>
