week8; exta practice; not for grading

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ accessed on: May 29, 2021
             <li><a href="week-5/talley-sequence-game.html">Assignment 5.2</a></li>
             <li><a href="week-6/tallley-in-n-out-books.html">Assignment 6.2</a></li>
             <li><a href="week-7/talley-javazon.html">Assignment 7.2</a></li>
-            <li><a href="#">Assignment 8.2</a></li>
+            <li><a href="week-8/talley-alphabet-game.html">Assignment 8.2</a></li>
+            <li><a href="week-8/konami code.html">Week 8: Extra Practice (not for grading</a></li>
         </ul>
     </div>
     
