--- a/week-8/konami code.html
+++ b/week-8/konami code.html
@@ -38,9 +38,11 @@
     </div>
 
     <div>
-        <img class="contra" src="https://i.imgur.com/Ikx5DvQm.jpg" alt="Konami Contra (C) 1997">  
+        <img class="contra" src="https://i.imgur.com/Ikx5DvQ.jpg" alt="Konami Contra (C) 1997" style="width:60%">  
     </div>
 
+    <br />
+    <a href="../index.html" class="return-home">Return</a>
     <script>
      var pattern = ['ArrowUp', 'ArrowUp', 'ArrowDown', 'ArrowDown', 'ArrowLeft', 'ArrowRight', 'ArrowLeft', 'ArrowRight', 'b', 'a'];
 var current = 0;
