--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ accessed on: May 29, 2021
             <li><a href="week-6/tallley-in-n-out-books.html">Assignment 6.2</a></li>
             <li><a href="week-7/talley-javazon.html">Assignment 7.2</a></li>
             <li><a href="week-8/talley-alphabet-game.html">Assignment 8.2</a></li>
-            <li><a href="week-8/konami code.html">Week 8: Extra Practice (not for grading</a></li>
+            <li><a href="week-8/konami code.html">Week 8: Extra Practice (not for grading)</a></li>
         </ul>
     </div>
     
