--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ accessed on: May 29, 2021
     <div class="container">
         <h3>Projects</h3>
         <ul>
-            <li><a href="#">Final: Card Game</a></li>
+            <li><a href="week-9/talley-card-game.html">Final: Card Game</a></li>
             <li><a href="#">bioSite Project Home Page</a></li>
         </ul>
     </div>
